--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
             <p>
                 hey gang whats up
             </p>
-            <img src="c:\Users\irakh\Downloads\DESG214\my-sketch\DSC_0045.JPG" />
+            <img src="DSC_0045.JPG" />
             <a href="https://www.flame.edu.in/"> Lexi</a>
         </div>
          </div>
     </body>
 </html>
+
